update: banner & ticket api doc
