# src/routes/api.ts
@@ -14,13 +14,55 @@ import bannerController from "../controller/banner.controller";
 const router = express.Router();
 
 // auth route
-router.post("/auth/register", authController.register);
+router.post(
+  "/auth/register",
+  authController.register
 
-router.post("/auth/login", authController.login);
+  /*
+     #swagger.tags = ['Auth']
+     #swagger.requestBody = {
+      required: true,
+      schema: {$ref: "#/components/schemas/RegisterRequest"}
+     }
+    */
+);
 
-router.get("/auth/me", authMiddleware, authController.me);
+router.post(
+  "/auth/login",
+  authController.login
 
-router.post("/auth/activation", authController.activation);
+  /*
+      #swagger.tags = ['Auth']
+     #swagger.requestBody = {
+     required: true,
+     schema: {$ref: "#/components/schemas/loginRequest"}}
+     */
+);
+
+router.get(
+  "/auth/me",
+  authMiddleware,
+  authController.me
+
+  /*
+     #swagger.tags = ['Auth']
+    #swagger.security = [{
+    "bearerAuth": []
+    }]
+ */
+);
+
+router.post(
+  "/auth/activation",
+  authController.activation
+
+  /*
+     #swagger.tags = ['Auth']
+     #swagger.requestBody = {
+     required: true,
+     schema: {$ref: "#/components/schemas/ActivationRequest"}}
+     */
+);
 
 // media route
 router.post(
@@ -302,47 +344,148 @@ router.post(
   "/tickets",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   ticketController.create
+
+  /*
+  #swagger.tags = ['Tickets']
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  #swagger.requestBody = {
+    required: true,
+    schema: {
+      $ref: "#/components/schemas/CreateTicketRequest"
+    }
+  }
+  */
 );
 
-router.get("/tickets", ticketController.findAll);
+router.get(
+  "/tickets",
+  ticketController.findAll
 
-router.get("/tickets/:id", ticketController.findOne);
+  /*
+  #swagger.tags = ['Tickets']
+  */
+);
+
+router.get(
+  "/tickets/:id",
+  ticketController.findOne
+
+  /*
+  #swagger.tags = ['Tickets']
+  */
+);
 
 router.put(
   "/tickets/:id",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   ticketController.update
+
+  /*
+  #swagger.tags = ['Tickets']
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  #swagger.requestBody = {
+    required: true,
+    schema: {
+      $ref: "#/components/schemas/CreateTicketRequest"
+    }
+  }  
+  */
 );
 
 router.delete(
   "/tickets/:id",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   ticketController.remove
+
+  /*
+  #swagger.tags = ['Tickets']
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  */
 );
 
-router.get("/tickets/:eventId/events", ticketController.findAllByEvent);
+router.get(
+  "/tickets/:eventId/events",
+  ticketController.findAllByEvent
+
+  /*
+ #swagger.tags = ['Tickets']
+*/
+);
 
 // banner endpoint
 router.post(
   "/banners",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   bannerController.create
+
+  /*
+  #swagger.tags = ['Banners']
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  #swagger.requestBody = {
+    required: true,
+    schema: {
+      $ref: "#/components/schemas/CreateBannerRequest"
+    }
+  }
+  */
 );
 
-router.get("/banners", bannerController.findAll);
+router.get(
+  "/banners",
+  bannerController.findAll
 
-router.get("/banners/:id", bannerController.findOne);
+  /*
+ #swagger.tags = ['Banners']
+*/
+);
+
+router.get(
+  "/banners/:id",
+  bannerController.findOne
+
+  /*
+ #swagger.tags = ['Banners']
+*/
+);
 
 router.put(
   "/banners/:id",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   bannerController.update
+
+  /*
+  #swagger.tags = ['Banners']
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  #swagger.requestBody = {
+    required: true,
+    schema: {
+      $ref: "#/components/schemas/CreateBannerRequest"
+    }
+  }  
+  */
 );
 
 router.delete(
   "/banners/:id",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   bannerController.remove
+
+  /*
+  #swagger.tags = ['Banners']
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  */
 );
 
 export default router;
